# solana-pinocchio-starter

./: README.md  gen-client.sh
client/: bun.lockb  generate-rust-client.ts  package.json
client/idl/: solana_pinocchio_starter.json
client/src/generated-rust/instructions/: mod.rs
client/src/generated-rust/types/: initialize_my_state_ix_data.rs  mod.rs  state.rs
program/: Cargo.toml
program/benches/: compute_units.md  compute_units.rs
program/src/: entrypoint.rs  lib.rs
program/src/instruction/: initialize_mystate.rs  update_mystate.rs
program/src/state/: my_state.rs
program/tests/: unit_litesvm_tests.rs  unit_tests.rs
